# xarray-eopf

./: CHANGES.md  CONTRIBUTING.md  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: integration-tests.yml  unit-tests.yml
eopf_xarray/: __init__.py  backend.py  version.py
examples/: open_sen1.ipynb  open_sen2.ipynb  open_sen3.ipynb
tests/: __init__.py  test_backend.py
tests/integration/: test_sen1.py  test_sen2.py
xarray_eopf/: version.py
